--- a/department-service/src/main/resources/application.yml
+++ b/department-service/src/main/resources/application.yml
@@ -1,27 +1,27 @@
 server:
   port: 9001
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/DepartmentService
-    username: postgres
-    password: 1234
-    driverClassName: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    open-in-view: false
-    generate-ddl: true
-  application:
-    name: DEPARTMENT-SERVICE
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/DepartmentService
+#    username: postgres
+#    password: 1234
+#    driverClassName: org.postgresql.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    database: postgresql
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    open-in-view: false
+#    generate-ddl: true
+#  application:
+#    name: DEPARTMENT-SERVICE
 
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: https://jenkins.flexcub.com/
   instance:
     hostname: localhost
